# qrparser

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  qr_extract_zxing.py
docker/: healthcheck.py
scripts/: print_tree.py  run_dev.py
src/qrparser/: __init__.py  cli.py
src/qrparser/config/: __init__.py  settings.py
src/qrparser/core/: __init__.py  composite_decoder.py  decoder_base.py  image_decoder.py  pdf_decoder.py
src/qrparser/observability/: logging.py
src/qrparser/web/: dependencies.py  main.py  middleware.py  routes.py  serve.py
src/qrparser/web/routers/: __init__.py  health.py  info.py
src/qrparser/web/routers/v1/: parse.py
src/qrparser/web/schemas/: __init__.py
tests/: conftest.py  test_config.py  test_logging_json.py  test_pdf_decoder.py
tests/web/: test_api.py  test_parse_endpoint.py  test_parse_errors.py  test_parse_integration.py  test_parse_limits.py  test_parse_mime_acceptance.py  test_parse_success.py  test_parse_validation.py
