[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "NlightN22"},
]
dependencies = [
  "pypdfium2",
  "pillow",
  "numpy",
  "zxing-cpp",
  "structlog>=24.1.0",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
]

description = "Stateless microservice for parsing QR codes from PDF"
name = "qrparser"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
